tests/NormalTests/paczka1/fuzzy1/98660354.err
Error in line 4: XNvf S986 51,40
Error in line 7: S118 S118 63,3
Error in line 18: BaC1 S118 208,90
Error in line 1: rzuBY S689 8,6
Error in line 28: /vC S9/6 74,/
Error in line 16: BaC1 S118 75,9
Error in line 26: 8vC S986 35,6
